# auto-analyze

./: .coverage  .env  .eslintignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdk.json  example.env  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: mega-linter.yml  node.js.yml  python-package.yml
auto-analyze/: compute.ts  constants.ts  initial_handler.ts  initial_workflow_lambda_handler.ts  post_handler.ts  post_initial_workflow_lambda_handler.ts
auto_analyze/: __main__.py  compute.py  constants.py
lambda_function/initial_workflow/: initial_workflow.ts
lambda_function/initial_workflow_lambda/: initial_workflow_lambda_handler.py
lambda_function/post_initial_workflow_lambda/: post_initial_workflow_lambda_handler.py
lambda_function/workflow1_fastq/: workflow1_fastq.ts
lambda_function/workflow2_vep/: workflow2_vep.ts
lib/: auto-analyze-stack.ts  compute.ts  compute.yaml  constants.ts  manifest-upload.ts  manifest.ts  omics-workflow-stack.ts  omics-workflow-stack.wf1_fastq.ts  omics-workflow-stack.wf2_vep.ts  omics-workflow-stack.yaml
resources/: workflow1_fastq.ts  workflow2_vep.ts
src/: compute.ts
test/: auto-analyze-stack.test.ts  auto-analyze.test.ts  constants.test.ts  fixture.ts  omics-workflow-stack.test.ts  omics-workflow-stack.wf1_fastq.test.ts  replacer.test.ts
tests/: test_compute.py
workflows/fastq/: aws_region.json  us-east-1.json
workflows/fastq/us-east-1/: us-east-1.json
workflows/fastq/us-west-2/: us-west-2.json
