[tool.poetry]
name = "auto_analyze"
version = "0.1.0"
description = ""
authors = ["Dr. Ernie Prabhakar <ernest@quiltdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.0.0"
mypy = "^1.4.1"
pytest-cov = "^4.0.0"
pytest-codeblocks = "^0.16.1"
pytest-watcher = "^0.3.4"
types-pyyaml = "^6.0.12.10"
types-tzlocal = "^5.0.1.0"
typing-extensions = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
